@@ -8,6 +8,7 @@ current 4.8.x development stream.
 
         Version         Latest Build
 
+        4.8.12          185
         4.8.11          183
         4.8.8           181
         4.8.7           180
